--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node index.js",
+    "server":"nodemon index.js",
+    "client": "npm start --prefix ../Public/myapp",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -16,5 +18,8 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
