--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node index.js",
-    "server":"nodemon index.js",
+    "server": "nodemon index.js",
     "client": "npm start --prefix ../Public/myapp",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
